kubernetes/apps/echo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo-demo
  namespace: tech-hub
  labels:
    app: http-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
      - name: http-echo
        image: hashicorp/http-echo:latest
        args:
          - "-text=Welcome to the AKS Demo V2"
        ports:
          - containerPort: 5678
