kubernetes/apps/echo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-echo-service
  namespace: tech-hub
spec:
  type: ClusterIP
  selector:
    app: http-echo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
