kubernetes/apps/echo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-echo-ingress
  namespace: tech-hub
spec:
  ingressClassName: "nginx"
  rules:
    - host: "echo.tech-hub.demo"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-echo-service
                port:
                  number: 80
